--- a/src/components/Global/Footer/Footer.module.scss
+++ b/src/components/Global/Footer/Footer.module.scss
@@ -114,4 +114,16 @@
             width: 90%;
         }
     }
+
+    @include breakpoint(xl) {
+        &__social {
+            padding-left: 5%;
+            width: 20%;
+        }
+
+        &__info {
+            padding-left: 15%;
+            width: 40%;
+        }
+    }
 }
