remove prettier config

--- a/src/components/Global/Footer/Footer.module.scss
+++ b/src/components/Global/Footer/Footer.module.scss
@@ -125,5 +125,15 @@
             padding-left: 15%;
             width: 40%;
         }
+
+        &__copy {
+            &__container {
+                &__a {
+                    &__img {
+                        width: 30%;
+                    }
+                }
+            }
+        }
     }
 }
