--- a/src/components/Global/Navbar/Navbar.module.scss
+++ b/src/components/Global/Navbar/Navbar.module.scss
@@ -2,11 +2,12 @@
 
 $spacing-md: 16px;
 $spacing-lg: 32px;
+$spacing-xl: 48px;
 
 .header {
     height: $header-height;
     background: $black;
-    font-family: $oswald-font;
+    font-family: $poppins-font;
     color: $white;
     width: 100%;
     box-shadow: 0 1px 5px $black;
@@ -14,14 +15,20 @@ $spacing-lg: 32px;
     &__content {
         max-width: 1920px;
         margin: 0 auto;
-        padding: 0 $spacing-md;
+        padding: 0 0 0 $spacing-md;
         @include breakpoint(md) {
-            padding: 0 $spacing-lg;
+            padding: 0 0 0 $spacing-lg;
+        }
+        transition: 0.3s ease padding;
+
+        @include breakpoint(lg) {
+            padding: 0 $spacing-xl;
         }
         transition: 0.3s ease padding;
 
         height: 100%;
         display: flex;
+        justify-content: space-between;
         align-items: center;
     }
 
