--- a/src/components/Global/SearchFilter/SearchFilter.module.scss
+++ b/src/components/Global/SearchFilter/SearchFilter.module.scss
@@ -10,10 +10,8 @@
     height: auto;
     background-color: $gallery;
     padding: 15px 30px;
-    border-bottom: 4px solid $black;
-    border-bottom-right-radius: $border-radius;
-    border-bottom-left-radius: $border-radius;
-    box-shadow: 0 1px 5px $black;
+    border-bottom: 4px solid #E5E5E5;
+    box-shadow: 0 0px 10px #484a4d;
 }
 
 input {
@@ -69,7 +67,6 @@ label {
     height: auto;
     font-size: 15px;
     cursor: pointer;
-    border: solid 2px $black;
     background-color: $royal-blue;
     color: $white;
     border-radius: $border-radius;
@@ -85,7 +82,6 @@ label {
 .search_button:hover, .remover_button:hover {
     background-color: $persian-blue;
     color: $black;
-    border: solid 2px $san-marino;
 }
 
 @include breakpoint(sm) {
@@ -101,14 +97,13 @@ label {
     }
 }
 
-@include breakpoint(md) {
+@include breakpoint(lg) {
     .filter{
         margin-top: 30px;
         flex-direction: row;
         width: 60%;
         align-self: center;
-        border: 4px solid $black;
-        border-radius: $border-radius;
+        box-shadow: 0px 15px 18px -15px #484a4d;
     }
 
     .container {
@@ -128,13 +123,13 @@ label {
 
     .search_button, .remover_button {
         width: 80%;
-        font-size: 12px;
+        font-size: 10px;
         padding: 4px 8px
     }
 }
 
-@include breakpoint(lg) {
+@include breakpoint(xl) {
     .search_button, .remover_button {
-        font-size: 14px;
+        font-size: 12px;
     }
 }
