UserContext and user session components

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -11,6 +11,7 @@ $black: #000000;
 $royal-blue: #437bea;
 $persian-blue: #1F56C1;
 $san-marino: #A3B1F0;
+$tabasco: #b70f0f;
 
 $border-radius: 8px;
 
