--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -10,10 +10,11 @@ $dove-gray: #646464;
 $black: #000000;
 $royal-blue: #437bea;
 $persian-blue: #1F56C1;
+$san-marino: #A3B1F0;
 
 $border-radius: 12px;
 
-$header-height: 72px;
+$header-height: 80px;
 
 $sm: 37.5em;
 $md: 48em;
