--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -11,13 +11,23 @@ body {
     width: 100%;
     font-family: $oswald-font;
     color: $black;
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     display: flex;
     flex-wrap: wrap;
 }
 
+.App {
+    height: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 #root {
-    width: 100%;
-    height: auto;
     background-color: $gallery;
+    height: 100%;
+    min-height: 100vh;
+    width: 100%;
 }
