--- a/src/components/Global/Footer/Footer.module.scss
+++ b/src/components/Global/Footer/Footer.module.scss
@@ -9,6 +9,7 @@
     padding: 5% 10%;
     display: grid;
     grid-template-rows: auto auto auto;
+    box-shadow: 0 1px 5px $black;
 
     &__social {
         width: 100%;
@@ -28,6 +29,8 @@
     .social_link {
         text-decoration: none;
         color: $white;
+        align-items: center;
+        display: flex;
     }
 
     .social_link:hover {
@@ -45,6 +48,7 @@
     .information {
         display: flex;
         padding-right: 15px;
+        align-items: center;
     }
 
     &__copy {
@@ -63,12 +67,16 @@
     }
 
     .logo_image {
-        width: 40%;
+        width: 60%;
     }
 
     .copyright_text {
-        display: block;
-        margin: auto;
+        display: flex;
+        align-items: center;
+    }
+
+    svg {
+        margin-right: 3px;
     }
 
     @include breakpoint(sm) {
@@ -81,7 +89,7 @@
         }
 
         .logo_image {
-            width: 60%;
+            width: 90%;
         }
     }
 
@@ -93,7 +101,7 @@
         font-size: 14px;
         padding: 3% 10%;
         .logo_image {
-            width: 55%;
+            width: 80%;
         }
     }
 
@@ -103,7 +111,7 @@
         grid-template-columns: 20% 35% 20%;
 
         .logo_image {
-            width: 50%;
+            width: 90%;
         }
     }
 }
