--- a/src/components/Products/Product/Product.module.scss
+++ b/src/components/Products/Product/Product.module.scss
@@ -2,35 +2,34 @@
 
 .product {
     margin: 0 auto;
-    padding: 20px 30px;
-    width: 90%;
+    padding: 25px 40px;
+    width: 100%;
     font-family: $poppins-font;
     border: solid 2px $black;
     border-radius: $border-radius;
     background-color: $white;
-    box-shadow: -10px 10px 8px -2px rgba(120,120,120,0.75);
-    -webkit-box-shadow: -10px 10px 8px -2px rgba(120,120,120,0.75);
-    -moz-box-shadow: -10px 10px 8px -2px rgba(120,120,120,0.75);
-    transition: transform 0.5s;
+    transition: transform 400ms;
 
-    @include breakpoint(md) {
-        width: 75%;
-    }
-
-    .product_image_container {
+    .link {
         width: 100%;
+        display: block;
     }
 
     .product_image {
-        width:100%;
+        min-width:230px;
+        width: 100%;
         border-radius: $border-radius;
-        border: solid 1px #646464;
+        border: solid 1px $dove-gray;
+        height: 240px;
+        background-size:contain;
+        background-repeat: no-repeat;
+        background-position: center;
     }
 
     .product_name {
         margin: 0;
         font-weight: 500;
-        font-size: 30px;
+        font-size: 20px;
     }   
 
     .product_button {
@@ -38,28 +37,45 @@
         padding: 0 auto;
         margin: 0 auto;
         background-color: $royal-blue;
-        color: $black;
+        color: $white;
         height: 30px;
         border-radius: $border-radius;
         font-size: 16px;
         font-weight: 600;
-        cursor: pointer;
         margin-top: 20px;
+        z-index: 100;
+        cursor: pointer;
+        border: solid 2px $black;
     }
 
     .product_button:hover {
         background-color: $persian-blue;
-        color: $white;
+        color: $black;
+        border: solid 3px $san-marino;
     }
-    
+
+    @include breakpoint(sm) {
+        width: 90%;
+        .product_image {
+            min-width: 165px;
+            height: 200px;
+        }
+    }
 
     @include breakpoint(md) {
+        .product_image {
+            min-width: 100px;
+        }
         .product_button{
             font-size: 12px;
         }
     }
 
     @include breakpoint(xl) {
+        width: 85%;
+        .product_image {
+            height: 250px;
+        }
         .product_button{
             font-size: 14px;
         }
@@ -67,5 +83,32 @@
 }
 
 .product:hover {
-    transform: scale(1.03);
+    transform: scale(1.09);
 }
+
+#transition {
+    position: relative;
+     box-shadow: -10px 10px 8px -2px rgba(120,120,120,0.75);
+     -webkit-box-shadow: -10px 10px 8px -2px rgba(120,120,120,0.75);
+     -moz-box-shadow: -10px 10px 8px -2px rgba(120,120,120,0.75);
+}
+  
+  #transition::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    border-radius: $border-radius;
+     box-shadow: -17px 17px 8px -2px rgba(120,120,120,0.75);
+     -webkit-box-shadow: -17px 17px 8px -2px rgba(120,120,120,0.75);
+     -moz-box-shadow: -17px 17px 8px -2px rgba(120,120,120,0.75);
+    opacity: 0;
+    transition: opacity 400ms;
+  }
+  
+  #transition:hover::before {
+    opacity: 1;
+  }
