--- a/src/components/Products/ProductDetail/ProductDetail.module.scss
+++ b/src/components/Products/ProductDetail/ProductDetail.module.scss
@@ -5,9 +5,16 @@
     height: auto;
     font-family: $poppins-font;
     background-color: $gallery;
-    padding: 5% 5% 12% 5%;
+    padding: 5% 10% 12% 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    justify-items: center;
+    align-items: center;
 
     &__header {
+        width: 100%;
         font-size: 20px;
         display: flex;
         justify-content: center;
@@ -15,7 +22,7 @@
     }
 
     .product_name_container {
-        width: 90%;
+        width: 100%;
     }
 
     .product_name {
@@ -24,25 +31,28 @@
     }
 
     &__img {
-        width: 90%;
-        margin: 0 auto;
+        max-width: 480px;
+        max-height: 480px;
+        width: 100%;
         margin-bottom: 30px;
+        background-color: $white;
+        display: flex;
+        justify-content: center;
+        border-radius: $border-radius;
+        border: solid 1px $dove-gray;
+    }
 
-        div {
-            width:100%;
-            border-radius: $border-radius;
-            border: solid 1px $dove-gray;
-
-            img {
-                width:90%;
-                border-radius: $border-radius;
-            }
-        }
+    .product_img {
+        max-height: 380px;
+        height: 100%;
+        width: 100%;
+        object-fit: contain;
+        border-radius: $border-radius;
     }
 
     &__content {
-        width: 90%;
-        margin: 0 auto;
+        width: 100%;
+        margin-bottom: 30px;
         padding: 3% 5%;
         background-color: $white;
         border-radius: $border-radius;
@@ -106,9 +116,7 @@
     }
 
     &__description {
-        margin: 0 auto;
-        margin-top: 5%;
-        width: 90%;
+        width: 100%;
         background-color: $white;
         border-radius: $border-radius;
         padding: 20px 30px;
@@ -130,22 +138,21 @@
     }
 
     @include breakpoint(sm) {
-        display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
-
-        &__header {
-            width: 100%;
-        }
+        justify-content: space-between;
+        padding: 0 10%;
 
         &__img {
-            width: 60%;
-            margin: 0 2% 0 2%;
+            width: 50%;
+            margin: 0;
         }
 
         &__content {
-            width: 33%;
+            margin: 0;
+            width: 45%;
             height: 100%;
-            padding: 2% 4%;
+            align-self: flex-start;
         }
 
         .shop_button {
@@ -153,24 +160,34 @@
         }
 
         &__description {
-            width: 95%;
+            margin-top: 30px;
         }
     }
 
     @include breakpoint(lg) {
-        &__content {
-            padding: 2% 3%;
+        .product_img {
+            max-height: 450px;
         }
     }
 
     @include breakpoint(xl) {
-        padding: 5% 10% 10% 10%;
+        padding: 7% 20%;
         &__img {
-            width: 56%;
+            width: 55%;
+            max-width: 480px;
+            max-height: 480px;
+        }
+
+        .product_img {
+            max-height: 478px;
+        }
+
+        &__content {
+            width: 40%;
         }
 
         &__description {
-            width: 96%;
+            margin-top: 50px;
         }
     }
 }
